--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/CustomCraft-Software-LLC/ccs-react-components#readme",
   "dependencies": {
+    "chart.js": "^4.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
