--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/CustomCraft-Software-LLC/ccs-react-components#readme",
   "dependencies": {
     "chart.js": "^4.4.2",
+    "generate-react-cli": "^8.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
