--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/CustomCraft-Software-LLC/ccs-react-components#readme",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "generate-react-cli": "^8.4.1",
     "react": "^18.3.1",
