--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ccs-react-components",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "CustomCraft LLC ready made react components",
   "main": "index.js",
   "scripts": {
@@ -29,7 +29,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.4",
+    "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
     "@chromatic-com/storybook": "^1.3.3",
@@ -43,7 +43,9 @@
     "@storybook/react-webpack5": "^8.0.9",
     "@storybook/test": "^8.0.9",
     "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.1",
     "storybook": "^8.0.9",
+    "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
