--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   },
   "homepage": "https://github.com/CustomCraft-Software-LLC/ccs-react-components#readme",
   "dependencies": {
-    "generate-react-cli": "^8.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -49,11 +48,14 @@
     "@storybook/react": "^8.0.9",
     "@storybook/react-webpack5": "^8.0.9",
     "@storybook/test": "^8.0.9",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "babel-loader": "^9.1.3",
     "rollup": "^2.79.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
-    "storybook": "^8.0.9"
+    "storybook": "^8.0.9",
+    "typescript": "^5.4.5"
   }
 }
