--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "jsx": "react",
     "strict": true,
     "esModuleInterop": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
   },
