--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ccs-react-components",
-  "version": "1.0.7",
+  "version": "1.0.0",
   "description": "CustomCraft LLC ready made react components",
   "main": "dist/bundle.js",
   "module": "dist/bundle.js",
@@ -57,6 +57,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "storybook": "^8.0.9",
+    "typedoc": "^0.25.13",
     "typescript": "^5.4.5"
   }
 }
