--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "ccs-react-components",
-  "version": "1.0.0",
+  "version": "1.0.8",
   "description": "CustomCraft LLC ready made react components",
   "main": "dist/bundle.js",
   "module": "dist/bundle.js",
   "files": [
-    "dist/"
+    "dist/bundle.js",
+    "license",
+    "README.md",
+    "package.json"
   ],
   "scripts": {
     "build": "rollup -c",
