--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ccs-react-components",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "CustomCraft LLC ready made react components",
   "main": "dist/bundle.js",
   "module": "dist/bundle.js",
@@ -59,6 +59,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
+    "standard-version": "^9.5.0",
     "storybook": "^8.0.9",
     "typedoc": "^0.25.13",
     "typescript": "^5.4.5"
