--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ccs-react-components",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "CustomCraft LLC ready made react components",
   "main": "dist/bundle.js",
   "module": "dist/bundle.js",
@@ -31,6 +31,9 @@
   },
   "homepage": "https://github.com/CustomCraft-Software-LLC/ccs-react-components#readme",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
