--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
+    "@mui/system": "^5.15.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
