--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@mui/material": "^5.15.19",
     "@mui/system": "^5.15.15",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
