--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -37,7 +37,8 @@
     "@mui/system": "^5.15.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "sanitize-html": "^2.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
@@ -59,6 +60,7 @@
     "@storybook/test": "^8.0.9",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "@types/sanitize-html": "^2.11.0",
     "babel-loader": "^9.1.3",
     "rollup": "^2.79.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
