--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -35,6 +35,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
     "@mui/system": "^5.15.15",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
@@ -58,6 +59,7 @@
     "@storybook/react": "^8.0.9",
     "@storybook/react-webpack5": "^8.0.9",
     "@storybook/test": "^8.0.9",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@types/sanitize-html": "^2.11.0",
