--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ccs-react-components",
-  "version": "1.1.0",
-  "description": "CustomCraft LLC ready made react components",
+  "name": "utils",
+  "version": "1.0.0",
+  "description": "CustomCraft LLC utils library",
   "main": "dist/bundle.js",
   "module": "dist/bundle.js",
   "files": [
@@ -18,18 +18,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CustomCraft-Software-LLC/ccs-react-components.git"
+    "url": "git+https://github.com/CustomCraft-Software-LLC/ccs.git"
   },
   "keywords": [
     "react",
-    "components"
+    "utils"
   ],
   "author": "CustomCraft Software LLC",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/CustomCraft-Software-LLC/ccs-react-components/issues"
+    "url": "https://github.com/CustomCraft-Software-LLC/ccs/issues"
   },
-  "homepage": "https://github.com/CustomCraft-Software-LLC/ccs-react-components#readme",
+  "homepage": "https://github.com/CustomCraft-Software-LLC/ccs#readme",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
