--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "generate-docs": "typedoc --out docs"
   },
   "repository": {
@@ -28,7 +28,11 @@
   },
   "homepage": "https://github.com/CustomCraft-Software-LLC/ccs#readme",
   "devDependencies": {
-    "typedoc": "^0.25.13"
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.4",
+    "typedoc": "^0.25.13",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "@types/react": "^18.3.3",
