--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
   },
   "homepage": "https://github.com/CustomCraft-Software-LLC/ccs#readme",
   "devDependencies": {
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.4",
     "typedoc": "^0.25.13",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@types/react": "^18.3.3",
     "react": "^18.3.1"
   }
 }
