--- a/packages/custom-components/package.json
+++ b/packages/custom-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "components",
+  "name": "custom-components",
   "version": "1.0.0",
   "description": "CustomCraft LLC ready made react components",
   "main": "dist/bundle.js",
