--- a/packages/mui-components/package.json
+++ b/packages/mui-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mui-components",
+  "name": "@custom-craft-software/mui-components",
   "version": "1.0.0",
   "description": "CustomCraft LLC ready made react components",
   "main": "dist/bundle.js",
