--- a/packages/mui-components/tsconfig.json
+++ b/packages/mui-components/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowImportingTsExtensions": true,
-    "noEmit": true,
+    "emitDeclarationOnly": false,
     "skipLibCheck": true,
     "declaration": true,
     "declarationDir": "./dist/types",
