--- a/packages/logging/tsconfig.json
+++ b/packages/logging/tsconfig.json
@@ -1,19 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "ES6",
+    "target": "ES2022",       // Ensure target is ES2022 or higher
+    "module": "ESNext",       // Use ESNext for module to support top-level await
     "jsx": "react",
     "strict": true,
     "esModuleInterop": true,
     "allowJs": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "noEmit": true, 
+    "noEmit": true,           // Do not emit JavaScript files
     "allowImportingTsExtensions": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "outDir": "dist"
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*", "examples/**/*"],
+  "exclude": ["node_modules"]
 }
