--- a/packages/logging/package.json
+++ b/packages/logging/package.json
@@ -2,8 +2,7 @@
   "name": "@custom-craft-software/utils",
   "version": "1.0.1",
   "description": "CustomCraft LLC utils library",
-  "main": "dist/bundle.js",
-  "module": "dist/bundle.js",
+  "type": "module",
   "publishConfig": {
     "access": "public"
   },
