--- a/packages/logging/package.json
+++ b/packages/logging/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "example-build": "npx tsc",
-    "start": "npx ts-node ./examples/Log.ts",
+    "start": "node ./dist/examples/Log.js",
     "build": "rollup -c",
     "test": "jest"
   },
@@ -34,8 +34,7 @@
   "homepage": "https://github.com/CustomCraft-Software-LLC/ccs#readme",
   "dependencies": {
     "axios": "^1.7.3",
-    "chalk": "^5.3.0",
-    "ts-node": "^10.9.2"
+    "chalk": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
@@ -48,6 +47,7 @@
     "rollup": "^2.79.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
 }
