--- a/packages/logging/tsconfig.json
+++ b/packages/logging/tsconfig.json
@@ -1,19 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2022",                     // Set the ECMAScript target version
-    "module": "ESNext",                     // Set the module system
-    "outDir": "./dist",                    // Output directory for compiled files
-    "rootDir": "./src",                    // Root directory of TypeScript files
-    "jsx": "react",                        // Enable JSX support if needed
-    "strict": true,                        // Enable strict type-checking
-    "esModuleInterop": true,               // Enable compatibility between CommonJS and ES Modules
-    "allowJs": true,                       // Allow JavaScript files
-    "moduleResolution": "node",            // Node.js module resolution
-    "resolveJsonModule": true,             // Allow importing JSON modules
-    "noEmit": false,                       // Emit output files (set to false to generate JavaScript files)
-    "skipLibCheck": true,                 // Skip type checking of declaration files
-    "forceConsistentCasingInFileNames": true // Ensure file name casing consistency
+    "target": "ES2022",
+    "module": "CommonJS",
+    "strict": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "noEmit": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*", "examples/**/*"], // Files to include
-  "exclude": ["node_modules"]              // Directories to exclude
+  "include": ["src/**/*", "examples/**/*"],
+  "exclude": ["node_modules"]
 }
