--- a/packages/logging/package.json
+++ b/packages/logging/package.json
@@ -34,7 +34,8 @@
   "homepage": "https://github.com/CustomCraft-Software-LLC/ccs#readme",
   "dependencies": {
     "axios": "^1.7.3",
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "fs": "^0.0.1-security"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
@@ -43,6 +44,7 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/node": "^22.1.0",
     "babel-loader": "^9.1.3",
     "rollup": "^2.79.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
