--- a/packages/logging/tsconfig.json
+++ b/packages/logging/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
-    "strict": true,
+    "module": "ESNext",
+    "target": "ESNext",
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "skipLibCheck": true, // Skip checking of library declaration files
-    "forceConsistentCasingInFileNames": true
+    "skipLibCheck": true,
+    "outDir": "./dist",
+    "sourceMap": true
   },
   "include": ["src/**/*.ts", "examples/**/*.ts"]
 }
