--- a/packages/logging/tsconfig.json
+++ b/packages/logging/tsconfig.json
@@ -6,7 +6,9 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "outDir": "./dist",
-    "sourceMap": true
+    "sourceMap": false,  // Disable source maps
+    "rootDir": "./"      // Set rootDir to the project root or adjust as needed
   },
-  "include": ["src/**/*.ts", "examples/**/*.ts"]
+  "include": ["src/**/*.ts", "examples/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
