--- a/packages/logging/package.json
+++ b/packages/logging/package.json
@@ -13,9 +13,8 @@
     "package.json"
   ],
   "scripts": {
-    "example-build": "npx tsc",
-    "start": "ts-node ./examples/Logger.ts",
-    "build": "rollup -c",
+    "build": "npx tsc",
+    "start": "ts-node ./examples/index.ts",
     "test": "jest"
   },
   "repository": {
@@ -33,22 +32,14 @@
   },
   "homepage": "https://github.com/CustomCraft-Software-LLC/ccs#readme",
   "dependencies": {
-    "axios": "^1.7.3",
-    "chalk": "^5.3.0",
-    "fs": "^0.0.1-security"
+    "axios": "^1.7.4",
+    "chalk": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "@types/node": "^22.1.0",
-    "babel-loader": "^9.1.3",
-    "rollup": "^2.79.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2",
+    "@types/node": "^22.3.0",
+    "jest": "^29.0.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.4"
