--- a/packages/logging/package.json
+++ b/packages/logging/package.json
@@ -33,7 +33,9 @@
   "homepage": "https://github.com/CustomCraft-Software-LLC/ccs#readme",
   "dependencies": {
     "axios": "^1.7.4",
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "colorette": "^2.0.20",
+    "moment-timezone": "^0.5.45"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
