--- a/packages/logging/package.json
+++ b/packages/logging/package.json
@@ -35,13 +35,16 @@
     "axios": "^1.7.4",
     "chalk": "^5.3.0",
     "colorette": "^2.0.20",
+    "date-fns": "^3.6.0",
     "moment-timezone": "^0.5.45"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
+    "@types/jest": "^29.5.12",
     "@types/node": "^22.3.0",
-    "jest": "^29.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.4"
