--- a/packages/mui-components/package.json
+++ b/packages/mui-components/package.json
@@ -33,8 +33,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.19",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "@mui/system": "^5.15.15",
+    "@storybook/addon-actions": "^8.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1"
@@ -55,7 +57,7 @@
     "@storybook/addon-onboarding": "^8.1.6",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.3",
     "@storybook/blocks": "^8.1.6",
-    "@storybook/react": "^8.1.6",
+    "@storybook/react": "^8.2.9",
     "@storybook/react-webpack5": "^8.1.6",
     "@storybook/test": "^8.1.6",
     "@types/react": "^18.3.1",
