--- a/packages/mui-components/package.json
+++ b/packages/mui-components/package.json
@@ -37,6 +37,7 @@
     "@mui/material": "^5.16.7",
     "@mui/system": "^5.15.15",
     "@storybook/addon-actions": "^8.2.9",
+    "axios": "^1.7.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1"
