--- a/packages/react-native-components/package.json
+++ b/packages/react-native-components/package.json
@@ -4,6 +4,7 @@
   "description": "react library mobile components",
   "main": "index.js",
   "scripts": {
+    "build": "tsc && babel src --out-dir lib --copy-files",
     "test": "jest"
   },
   "repository": {
