--- a/package.json
+++ b/package.json
@@ -28,17 +28,23 @@
   },
   "homepage": "https://github.com/CustomCraft-Software-LLC/ccs#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
     "@testing-library/dom": "^10.1.0",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-native": "^0.73.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-native": "^4.0.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.4",
     "typedoc": "^0.25.13",
-    "typescript": "^5.4.5"
+    "typescript": "^5.6.2"
   },
   "dependencies": {
-    "react": "^18.3.1"
+    "react": "^18.3.1",
+    "react-native": "^0.75.2"
   }
 }
