--- a/packages/react-native-components/package.json
+++ b/packages/react-native-components/package.json
@@ -2,9 +2,9 @@
   "name": "react-native-components",
   "version": "1.0.0",
   "description": "react library mobile components",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "build": "tsc && babel src --out-dir lib --copy-files",
+    "build": "tsc && babel src --out-dir lib --extensions \".ts,.tsx\" --copy-files",
     "test": "jest"
   },
   "repository": {
@@ -30,13 +30,15 @@
     "react-native": "^0.75.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.25.6",
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.5.4"
+    "typescript": "^5.6.2"
   }
 }
