--- a/packages/custom-components/package.json
+++ b/packages/custom-components/package.json
@@ -37,7 +37,8 @@
     "@mui/system": "^5.15.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "rollup-plugin-size-snapshot": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
@@ -59,7 +60,9 @@
     "@storybook/test": "^8.1.6",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
+    "cssnano": "^7.0.6",
     "rollup": "^2.79.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
