--- a/packages/logging/package.json
+++ b/packages/logging/package.json
@@ -13,9 +13,11 @@
     "package.json"
   ],
   "scripts": {
-    "build": "npx tsc",
+    "build": "rollup -c",
+    "build:tsc": "npx tsc",
     "start": "npx tsx ./examples/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "watch": "rollup -c -w"
   },
   "repository": {
     "type": "git",
@@ -41,9 +43,14 @@
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.3.0",
     "jest": "^29.7.0",
+    "rollup": "^4.21.3",
+    "rollup-plugin-typescript2": "^0.36.0",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
