--- a/packages/logging/tsconfig.json
+++ b/packages/logging/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "outDir": "./dist",
-    "rootDir": "./",
-    "strict": true,
+    "target": "ES2020",                  // Use a modern target if your environment allows
+    "module": "ESNext",                  // Use ESNext for tree-shaking support
+    "strict": true,                      // Enable strict type checking
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "skipLibCheck": true,                // Skips type-checking for libraries, faster build
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "declaration": true,                 // Create declaration files for future use
+    "outDir": "./dist",                  // Output directory for compiled files
+    "sourceMap": false                   // Disable source maps for production builds
   },
-  "include": ["src/**/*", "__tests__/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "logs", "logs_test", "__tests__"],
+  "include": ["src/**/*.ts"]
 }
