--- a/packages/mui-components/package.json
+++ b/packages/mui-components/package.json
@@ -68,6 +68,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.36.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "standard-version": "^9.5.0",
     "storybook": "^8.1.6",
