--- a/packages/custom-components/package.json
+++ b/packages/custom-components/package.json
@@ -37,6 +37,7 @@
     "@mui/system": "^5.15.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.23.1",
     "rollup-plugin-size-snapshot": "^0.12.0"
   },
