--- a/packages/contexts/package.json
+++ b/packages/contexts/package.json
@@ -4,6 +4,8 @@
   "description": "contexts, library, npm, react, application mangement, react-native",
   "main": "index.ts",
   "scripts": {
+    "clean": "rimraf dist",
+    "build": "npm run clean && rollup -c",
     "test": "jest"
   },
   "keywords": [
@@ -18,6 +20,7 @@
   "author": "CustomCraft Software, LLC",
   "license": "MIT",
   "devDependencies": {
+    "rimraf": "^6.0.1",
     "rollup": "^2.79.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
