--- a/packages/react-native-components/package.json
+++ b/packages/react-native-components/package.json
@@ -29,8 +29,19 @@
   },
   "homepage": "https://github.com/CustomCraft-Software-LLC/ccs-react-components#readme",
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "@storybook/addon-essentials": "^8.3.3",
+    "@storybook/addon-interactions": "^8.3.3",
+    "@storybook/addon-links": "^8.3.3",
+    "@storybook/addon-onboarding": "^8.3.3",
+    "@storybook/react-native": "^7.6.20",
     "react": "^18.3.1",
-    "react-native": "^0.75.2"
+    "react-native": "^0.75.2",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.6",
@@ -38,6 +49,8 @@
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@storybook/addon-actions": "^8.3.3",
+    "@storybook/addon-knobs": "^8.0.1",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
