--- a/packages/logging/package.json
+++ b/packages/logging/package.json
@@ -38,7 +38,8 @@
     "chalk": "^5.3.0",
     "colorette": "^2.0.20",
     "date-fns": "^3.6.0",
-    "moment-timezone": "^0.5.45"
+    "moment-timezone": "^0.5.45",
+    "rollup-plugin-peer-deps-external": "^2.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
