--- a/packages/logging/package.json
+++ b/packages/logging/package.json
@@ -38,23 +38,23 @@
     "chalk": "^5.3.0",
     "colorette": "^2.0.20",
     "date-fns": "^3.6.0",
-    "moment-timezone": "^0.5.45",
-    "rollup-plugin-peer-deps-external": "^2.2.4"
+    "express": "^4.21.0",
+    "lodash": "^4.17.21",
+    "moment-timezone": "^0.5.45"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.3.0",
     "jest": "^29.7.0",
-    "rollup": "^4.21.3",
+    "rollup": "^2.79.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.6.2"
   }
 }
