--- a/packages/mui-components/package.json
+++ b/packages/mui-components/package.json
@@ -64,7 +64,11 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "babel-loader": "^9.1.3",
-    "rollup": "^2.79.1",
+    "rollup": "^2.79.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-insert": "^1.3.2",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
