--- a/packages/react-native-components/package.json
+++ b/packages/react-native-components/package.json
@@ -7,7 +7,7 @@
     "access": "public"
   },
   "scripts": {
-    "build": "tsc && babel src --out-dir lib --extensions \".ts,.tsx\" --copy-files",
+    "build": "rollup -c",
     "test": "jest"
   },
   "repository": {
@@ -38,7 +38,7 @@
     "@storybook/addon-onboarding": "^8.3.3",
     "@storybook/react-native": "^7.6.20",
     "react": "^18.3.1",
-    "react-native": "^0.75.2",
+    "react-native": "^0.75.3",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0"
@@ -51,9 +51,17 @@
     "@babel/preset-typescript": "^7.24.7",
     "@storybook/addon-actions": "^8.3.3",
     "@storybook/addon-knobs": "^8.0.1",
+    "@types/react-native": "^0.73.0",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
+    "rollup": "^2.79.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.36.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.2"
   }
