--- a/packages/custom-components/package.json
+++ b/packages/custom-components/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.23.1",
+    "react-syntax-highlighter": "^15.6.1",
     "rollup-plugin-size-snapshot": "^0.12.0"
   },
   "devDependencies": {
@@ -61,6 +62,7 @@
     "@storybook/test": "^8.1.6",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
     "cssnano": "^7.0.6",
