--- a/packages/custom-components/package.json
+++ b/packages/custom-components/package.json
@@ -49,6 +49,7 @@
     "@chromatic-com/storybook": "^1.5.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@storybook/addon-essentials": "^8.1.6",
